MacOS Metal GPU backend: Icon scaling isn't interpolated correctly #103398

Closed
opened 2022-12-22 10:09:34 +01:00 by William Reynish · 4 comments

System Information
Operating system: macOS-13.1-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Max 1.2

Blender Version
version: 3.5.0 Alpha, branch: master, commit date: 2022-12-21 20:25, hash: cef5841e12

Short description of error
When using the Metal GPU backend, non-integer UI scaling causes icons to not be scaled and interpolated correctly.

Metal vs OpenGL:
Screenshot 2022-12-22 at 10.05.17.png

Exact steps for others to reproduce the error

  • Open Preferences and set the GPU backend to Metal
  • Restart Blender and make sure it's using Metal
  • Open Preferences and set the UI scale to 0.8
  • Observe that the icons are not scaled with smooth interpolation.
**System Information** Operating system: macOS-13.1-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Max 1.2 **Blender Version** version: 3.5.0 Alpha, branch: master, commit date: 2022-12-21 20:25, hash: `cef5841e12` **Short description of error** When using the Metal GPU backend, non-integer UI scaling causes icons to not be scaled and interpolated correctly. Metal vs OpenGL: ![Screenshot 2022-12-22 at 10.05.17.png](https://archive.blender.org/developer/F14082652/Screenshot_2022-12-22_at_10.05.17.png) **Exact steps for others to reproduce the error** - Open Preferences and set the GPU backend to Metal - Restart Blender and make sure it's using Metal - Open Preferences and set the UI scale to 0.8 - Observe that the icons are not scaled with smooth interpolation.

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
William Reynish changed title from MacOS Metal backend: Icon scaling isn't interpolated correctly to MacOS Metal GPU backend: Icon scaling isn't interpolated correctly 2022-12-22 10:10:26 +01:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm a difference:

OpenGL: Metal:
OpenGL.png Metal.png

System Information
Operating system: macOS-12.2-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Apple 4.1 Metal - 76.3

I can confirm a difference: |OpenGL:|Metal: |---|--- |![OpenGL.png](https://archive.blender.org/developer/F14083919/OpenGL.png)|![Metal.png](https://archive.blender.org/developer/F14083921/Metal.png) --- **System Information** Operating system: macOS-12.2-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Apple 4.1 Metal - 76.3
Philipp Oeser removed the
Interest
EEVEE & Viewport
label 2023-02-09 15:11:58 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-26 13:23:54 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#103398
No description provided.